# lxe

./: .gitignore  Cargo.toml  LICENSE  PACKAGING_GUIDE.md  README.md  install.sh
.github/workflows/: build-bundled.yml  release.yml
docker/: Dockerfile.bundle
examples/velocity/: lxe.toml
examples/vscode/: LICENSE.txt  lxe.toml
lxe-cli/: Cargo.toml
lxe-cli/src/: detect.rs  main.rs
lxe-common/: Cargo.toml
lxe-common/src/: config.rs  lib.rs  metadata.rs  paths.rs  signing.rs
lxe-runtime/: Cargo.toml
lxe-runtime/src/: extractor.rs  installer.rs  lib.rs  libloader.rs  main.rs  manifest.rs  polkit.rs  state.rs
lxe-runtime/src/ui/: styles.css  window.rs  wizard.rs
lxe-runtime/src/ui/pages/: complete.rs  license.rs  maintenance.rs  mod.rs  progress.rs  welcome.rs
scripts/: bundle-libs.sh
src/: config.rs  extractor.rs  installer.rs  lib.rs  main.rs  metadata.rs  payload.rs  polkit.rs  state.rs
src/ui/: UI_DEVELOPMENT.md  app.rs  mod.rs  window.rs  wizard.rs
src/ui/pages/: complete.rs  mod.rs  progress.rs  welcome.rs
templates/: README.md  electron.toml  python.toml  tauri.toml
