[workspace]
resolver = "2"
members = ["lxe-common", "lxe-cli", "lxe-runtime"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lxe-core/lxe"
authors = ["Arsh"]

[workspace.dependencies]
# Shared across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Compression
ruzstd = "0.7"
zstd = "0.13"
tar = "0.4"

# Paths
dirs = "6.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
self_update = { version = "0.39", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

# Async (runtime only)
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "sync", "io-util", "macros", "process"] }
tokio-stream = "0.1"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# D-Bus (runtime only)
zbus = "5.0"
zbus_polkit = "5.0"

# GUI (runtime only)
gtk = { package = "gtk4", version = "0.7", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.5", features = ["v1_2"] }
glib = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
