[package]
name = "lxe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LXE CLI - Zero-dependency Linux package builder"

[[bin]]
name = "lxe"
path = "src/main.rs"

[dependencies]
lxe-common = { path = "../lxe-common" }
clap.workspace = true
indicatif.workspace = true
self_update.workspace = true
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
tar.workspace = true
dirs.workspace = true
zstd.workspace = true
dialoguer = "0.11"
flate2 = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
toml.workspace = true
