[package]
name = "lxe-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LXE shared library - metadata, config, signing, and payload handling"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
ruzstd.workspace = true
tar.workspace = true
dirs.workspace = true
tracing.workspace = true
